--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "authors": [
     {
       "name": "Stefan Stammler",
-      "email": "sst@bitsbeats.com"
+      "email": "stefan@fostam.org"
     }
   ],
   "minimum-stability": "stable",
