--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "name": "fostam/pharizer",
+  "description": "Create phar files / executables from a PHP project file structure",
+  "keywords": ["phar", "executable", "archive", "binary", "script", "console"],
   "license": "Apache-2.0",
   "type": "project",
   "require": {
