--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
   "license": "Apache-2.0",
   "type": "library",
   "require": {
-    "php": ">=7.2",
+    "php": "^8.2",
     "ext-phar": "*",
-    "symfony/yaml": "^5.1",
-    "symfony/console": "^5.1"
+    "symfony/yaml": "^7.3",
+    "symfony/console": "^7.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "8.5.*"
+    "phpunit/phpunit": "11.5.*"
   },
   "bin": [
     "bin/pharizer"
